examples/test/testpolicy7372.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7372
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key43: value45
      key27: value36
      key45: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value28
          key26: value45
          key43: value14
